2013-06-06  Ramon Casero  <rcasero@gmail.com>

	* Delete cpp/src/third-party/CGAL-4.2/examples:
	* Delete cpp/src/third-party/CGAL-4.2/demo:
	* Delete cpp/src/third-party/CGAL-4.2/doc_html:

	- Unnecessary to build the project, just make checking out the
	project slower.

2013-06-05  Ramon Casero  <rcasero@gmail.com>

	* Delete cpp/src/third-party/CGAL-4.0.2:
	* Delete cpp/src/third-party/gmp-5.0.5:
	* Delete cpp/src/third-party/mpfr-3.1.1:

	- We have upgraded to new versions of these libraries.

	* matlab/CgalToolbox/CMakeLists.txt: (0.2.1)

	- Update path to CGAL, as we are now using a new version (4.2)
	with a different directory name.

	* matlab/ItkToolbox/CMakeLists.txt: (0.5.8)

	- Add dependency to compiler_config.h, a header file generated by
	CGAL and only available once CGAL has installed.

	* cpp/src/CMakeLists.txt: (0.2.5)

	- after CGAL builds, we need to copy the header file
	compiler_config.h it generates to the CGAL include directory, so
	that it's available for the other sub-projects that use CGAL
	(e.g. itk_imfilter).

	* matlab/ItkToolbox/CMakeLists.txt: (0.5.7)

	- Update path to CGAL, as we are now using a new version (4.2)
	with a different directory name.

	* cpp/src/third-party/CGAL-4.2/cmake/modules/CGAL_SetupBoost.cmake: (0.1.0)

	- We distribute the boost libraries with gerardus, so we don't
	need to look for them as an external package. In fact, if we don't
	comment out the find_package() below, we get a recursive loop with
	CGAL that throws a configuration warning.

	* cpp/src/third-party/CGAL-4.2/CMakeLists.txt: (0.1.0)

	- Modifications to make CGAL build as a subproject in Gerardus.

	* cpp/src/CMakeLists.txt: (0.2.4)

	- Now instead of giving an error for the Windows build, we are
	going to use the pre-compiled GMP and MPFR libraries distributed
	with the Windows installer for CGAL. For Unix-like builds, we
	build GMP and MPFR from the source code, as we were doing
	before. This hasn't been tested with Windows yet, though.
